add test for model saving and loading with dcp

--- a/parallelism/notebook.ipynb
+++ b/parallelism/notebook.ipynb
@@ -2623,6 +2623,140 @@
     "if __name__ == '__main__':\n",
     "    main()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d0f528c1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "27dd61b8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "25844799",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "cee16d0d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re\n",
+    "s = r\"\\boxed{ 43 + 743 cos sign}\"            # or \"\\\\boxed{42}\" if the string literal escaped backslash\n",
+    "m = re.search(r'\\\\boxed\\{([^}]*)\\}', s)\n",
+    "if m:\n",
+    "    answer = m.group(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "b03b721e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "' 43 + 743 cos sign'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "answer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "4804bc08",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def reward_fn(predicted_answer, actual_answer):\n",
+    "    # use regex to scrape the answer from \\\\boxed{answer}\n",
+    "    \n",
+    "    m = re.search(r'\\\\boxed\\{([^}]*)\\}', predicted_answer)\n",
+    "    if m:\n",
+    "        answer = m.group(1).strip()\n",
+    "    \n",
+    "    if answer == actual_answer.strip():\n",
+    "        return 1.0\n",
+    "    else:\n",
+    "        return 0.0\n",
+    "    \n",
+    "predicted_answer = r\"\\boxed{ 2   }\"\n",
+    "reward_fn(predicted_answer, \"   2  \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "f4b1bbd0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def reward_fn(predicted_answer, actual_answer):\n",
+    "    # use regex to scrape the answer from \\\\boxed{answer}\n",
+    "    m = re.search(r'\\\\boxed\\{([^}]*)\\}', predicted_answer)\n",
+    "    answer = m.group(1).strip() if m else None\n",
+    "\n",
+    "    if answer == actual_answer.strip():\n",
+    "        return 1.0\n",
+    "    else:\n",
+    "        return 0.0\n",
+    "    \n",
+    "    \n",
+    "predicted_answer = r\"\\boxed{ 2   }\"\n",
+    "reward_fn(predicted_answer, \"   2  \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "241ad5bd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
