--- a/parallelism/notebook.ipynb
+++ b/parallelism/notebook.ipynb
@@ -2627,7 +2627,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d0f528c1",
+   "id": "5bea2aba",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2635,7 +2635,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27dd61b8",
+   "id": "6aeef25b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2643,7 +2643,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25844799",
+   "id": "5af2b964",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2651,7 +2651,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "cee16d0d",
+   "id": "3d77ef36",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2665,7 +2665,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "b03b721e",
+   "id": "2e802888",
    "metadata": {},
    "outputs": [
     {
@@ -2686,7 +2686,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "4804bc08",
+   "id": "214ea7b1",
    "metadata": {},
    "outputs": [
     {
@@ -2720,7 +2720,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "f4b1bbd0",
+   "id": "b4d8ee50",
    "metadata": {},
    "outputs": [
     {
@@ -2752,8 +2752,258 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "id": "fc75bec2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import wandb"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "4a16690f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from dataclasses import dataclass\n",
+    "\n",
+    "@dataclass\n",
+    "class Config:\n",
+    "    temperature: float = 1.0\n",
+    "    train_batch_size: int = 64\n",
+    "    model_name: str = 'Qwen/Qwen2.5-0.5B-Instruct'\n",
+    "    ddp_size: int = 1 \n",
+    "    tp_size: int = 2 \n",
+    "    lr: float = 1e-6\n",
+    "    data_path: str = 'CohleM/olympiad_small'\n",
+    "    responses_per_prompt: int = 2 \n",
+    "    per_rollout_size: int = 3\n",
+    "    offload_model: bool = True\n",
+    "    updates_per_rollout: int = 3\n",
+    "    max_eps: float = 0.2 \n",
+    "    min_eps: float = 0.2 \n",
+    "    checkpoint_interval: int = 10\n",
+    "    resume_steps: int = 0\n",
+    "        \n",
+    "config=Config()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "e97c001b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Failed to detect the name of this notebook, you can set it manually with the WANDB_NOTEBOOK_NAME environment variable to enable code saving.\n",
+      "\u001b[34m\u001b[1mwandb\u001b[0m: \u001b[33mWARNING\u001b[0m If you're specifying your api key in code, ensure this code is not shared publicly.\n",
+      "\u001b[34m\u001b[1mwandb\u001b[0m: \u001b[33mWARNING\u001b[0m Consider setting the WANDB_API_KEY environment variable, or running `wandb login` from the command line.\n",
+      "\u001b[34m\u001b[1mwandb\u001b[0m: Appending key for api.wandb.ai to your netrc file: /Users/cohlem/.netrc\n",
+      "\u001b[34m\u001b[1mwandb\u001b[0m: Currently logged in as: \u001b[33mcohlem\u001b[0m to \u001b[32mhttps://api.wandb.ai\u001b[0m. Use \u001b[1m`wandb login --relogin`\u001b[0m to force relogin\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "wandb.login(key='7ef9089be2b756ca103b3122abc0bb2757e7f8d5')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "188a06ce",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<button onClick=\"this.nextSibling.style.display='block';this.style.display='none';\">Display W&B run</button><iframe src='https://wandb.ai/cohlem/rl/runs/ynzil36e?jupyter=true' style='border:none;width:100%;height:420px;display:none;'></iframe>"
+      ],
+      "text/plain": [
+       "<wandb.sdk.wandb_run.Run at 0x10767d820>"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "wandb.init(project='rl', name='test2', config=config)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "0695cf12",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random\n",
+    "for i in range(10):\n",
+    "    wandb.log( {'loss': i, 'somethingelse': random.randint(0,1) }, step=i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "88365718",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defaultdict(list, {})"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from collections import defaultdict\n",
+    "\n",
+    "groups = defaultdict(list)\n",
+    "groups"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "2020332b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "groups['a']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "8f45eda9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defaultdict(list, {'a': []})"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "groups"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "8bd4b64c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.0"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sum([1,2,3])/len([1,2,3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "896a913b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "metrics = [\n",
+    "    {\"response_length\": 512, \"reward\": 1},\n",
+    "    {\"response_length\": 243, \"reward\": 0},\n",
+    "    {\"response_length\": 678, \"reward\": 1},\n",
+    "    {\"response_length\": 120, \"reward\": -1},\n",
+    "    {\"response_length\": 450, \"reward\": 0},\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "241ad5bd",
+   "id": "c7ef218a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "08e5c4a7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "metrics = {k: sum([item[k] for item in metrics])/len(metrics) for k in metrics[0].keys()}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "5217efe7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'response_length': 400.6, 'reward': 0.2}"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "metrics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "60d80986",
    "metadata": {},
    "outputs": [],
    "source": []
